--- a/style.page1.css
+++ b/style.page1.css
@@ -39,7 +39,13 @@
 .BottomBlock1 {
   position: fixed;
   bottom: 0;
+  font-size:13px;
+  width: 100%;
+
 }
+/* .fut{
+
+} */
 
 @media(max-width:768px){
   .MainBlock{
@@ -56,5 +62,13 @@
   .MainBlock .ShopIkon img {
     width: 280px;
     height: 280px;
+  }
+  .BottomBlock1{
+    font-size:10px;
+  }
+}
+@media(max-width:414px){
+  .BottomBlock1{
+    background-color:rgb(217,211,203) ;
   }
 }
