--- a/BottomBlock.css
+++ b/BottomBlock.css
@@ -1,5 +1,5 @@
+/* стиль для нижнего блока */
 .BottomBlock {
-  /* width: 100%; */
   background-color: rgb(245,157,121);;
   border: 1px solid rgb(245,157,121);;
   display: flex;
@@ -27,8 +27,7 @@
   margin: 3px 0px 0px 3px;
   font-size: 20px;
 }
-
-
+/* Media Queries(верстка) */
 @media(max-width:375px){
   .BottomBlock .a1{
     font-size:15px;
