--- a/TopBlock.css
+++ b/TopBlock.css
@@ -3,13 +3,10 @@ body {
     background-size: 800px;
     font-family: 'GOST type B';
     margin:0;
-    /* width: 100%;
-    height: 100%; */
 }
 a {color:black;}
-/**/
+/*стиль для верхнего блока*/
 .TopBlock {
-    /* width: 100%; */
     background-color: rgb(245,157,121);
     border: 1px solid rgb(245,157,121);
     border-radius: 25px;
@@ -19,19 +16,21 @@ a {color:black;}
     height: 40px;
     margin-top: 40px;
 }
+/* стиль для подписи */
 .TopBlock .content p{
     margin:8px 0px 0px 19px;
     font-size:20px;
 }
+/* стиль для картинки */
 .ikon img{
     position:relative;
-    /* left:5px; */
     top:-40px;
     z-index:2;
     border-radius:70px;
     height:120px;
     width:120px;
 }
+/* Media Queries(верстка) */
 @media(max-width: 410px){
     .TopBlock{
       height:60px;
