--- a/style.galery11.css
+++ b/style.galery11.css
@@ -1,3 +1,4 @@
+/* Средний блок */
 .MainBlock{
     display: flex;
     flex-direction: row;
@@ -29,7 +30,7 @@
     background-color:rgb(217,211,203);
     font-size:25px;
 } 
-
+/* Media Queries(верстка) */
 @media(max-width:611px) and (min-width:413px){
     .container1 .pict1 img{
         width:500px;
